--- a/myoungjin/html/map.html
+++ b/myoungjin/html/map.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,45 +12,63 @@
     <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
 </head>
-<body>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=122a12ac53dfd9ece5eb472180241e53"></script>
-     <!--header-->
-     <div class="relative content bg-gray-50 border-white">
-        <nav class="bg-white border-gray-200">
-            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15">
-                <a href="#" class="flex items-center">
-                    <img src="../img/logo.png" class="w-24 h-9 mr-3" />
-                </a>
-                <div class="flex justify-end items-center">
-                    <div class="w-20 h-8 text-center p-1">
-                        <button>로그인</button>
-                    </div>
-                    <div class="bg-yellow-300 w-20 h-8 rounded text-center p-1">
-                        <button>회원가입</button>
-                    </div>
-                </div>
 
+<body>
+    <script type="text/javascript"
+        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=122a12ac53dfd9ece5eb472180241e53"></script>
+    <!--header-->
+    <div class="relative content bg-gray-50 border-white">
+        <div class="bg-white border-gray-200 shadow">
+            <nav>
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15">
+                    <a href="#" class="flex items-center">
+                        <img src="../img/logo.png" class="w-24 h-9 mr-3" />
+                    </a>
+                    <div class="flex justify-end items-center">
+                        <div class="w-20 h-8 text-center p-1">
+                            <button>로그인</button>
+                        </div>
+                        <div class="bg-yellow-300 w-20 h-8 rounded text-center p-1">
+                            <button>회원가입</button>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+
+            <nav>
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0 shadow-md">
+                    <div>
+                        <a href="#">홈</a>
+                        <div class="bg-mySky p-1 h-3"></div>
+                    </div>
+                    <div class="font-bold">
+                        <a href="#">주변 대피소</a>
+                        <div class="bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"></div>
+                    </div>
+                    <div>
+                        <a href="#">체크리스트</a>
+                        <div class="bg-mySky p-1 h-3"></div>
+                    </div>
+                </div>
+            </nav>
+            <!--main-->
+            <div class="ml-5 mr-5 mb-5 mt-2">
+                <div class="font-bold text-2xl">인천광역시 부평구 삼산2동</div>
+                <div class="text-lg">주변 대피소를 확인해보세요.</div>
+                <div class="flex mb-2 mt-2">
+                    
+                    <div class="h-8 bg-gray-600 item-center rounded-full text-xs px-4 p-2 text-white font-bold">전체</div>
+                    <div class="h-8 bg-yellow-600 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">지진/해일</div>
+                    <div class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">민방위</div>
+                </div>
+                <div id="map" class="max-w-screen-xl h-screen"></div>
             </div>
-        </nav>
-        <!--nav바-->
-        <nav class="bg-white border-gray-200 shadow-md">
-            <div class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0">
-                <div>
-                    <a href="#">홈</a>
-                    <div class="bg-mySky p-1 h-3"></div>
-                </div>
-                <div>
-                    <a href="#">주변 대피소</a>
-                    <div class="bg-mySky p-1 h-3"></div>
-                </div>
-                <div>
-                    <a href="#">체크리스트</a>
-                    <div class="bg-mySky p-1 h-3"></div>
-                </div>
-            </div>
-        </nav>
-        <div id="map" class="max-w-screen-xl h-96"></div>
+        </div>
+    </div>
+
+
     </div>
     <script src="../js/map.js"></script>
 </body>
-    </html>
+
+</html>
