--- a/myoungjin/html/alarm_select.html
+++ b/myoungjin/html/alarm_select.html
@@ -17,9 +17,9 @@
     <div class="relative content bg-white border-white">
         <div class="bg-white ">
             <nav>
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 border-b-2">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow-md">
                     <a href="#" class="flex items-center">
-                        <img src="#" class="w-24 h-9 mr-3" />
+                        <img src="../img/logo.png" class="w-24 h-9 mr-3" />
                     </a>
                     <div class="flex justify-end items-center">
                         <div class="w-20 h-8 text-center p-1">
@@ -36,7 +36,7 @@
                 <nav>
                     <div class="h-32">
                         <div class="ml-3 flex-col justify-start h-12">
-                            <div><a href="../html/alarm.html" class="flex items-center mt-4">
+                            <div><a href="#" class="flex items-center mt-4">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none">
                                         <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2"
@@ -82,7 +82,7 @@
                 <div class="mx-auto">
                     <nav>
                         <div class="ml-3 flex-col justify-start">
-                            <div><a href="../html/alarm_select.html" class="flex items-center mt-4">
+                            <div><a href="#" class="flex items-center mt-4">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none">
                                         <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2"
