1차 수정사항

--- a/yunjin/mainDetail.html
+++ b/yunjin/mainDetail.html
@@ -62,13 +62,13 @@
 
 <!--댓글 박스-->
 <div class="flex items-center justify-center text-start">
-    <div class="h-28 w-80 mt-2 p-4 text-sm font-bold text-start">
+    <div class="h-28 w-80 mt-2 p-3 text-sm text-start">
         <div class="flex items-center justify-start">
-            <div>인천광역시 부평구 삼산2동</div>
+            <div class="font-bold">인천광역시 부평구 삼산2동</div>
             <div class="text-grey-600 font-medium text-sm ml-5">강***</div>
         </div>
        
-        <div class="flex items-start justify-center text-black font-medium text-base mt-2">
+        <div class="flex items-start justify-center text-black text-base mt-2">
            역천교 주변 여울교는 이미 잠겼어요. 주의하세요
         </div> 
         <div class="flex items-center justify-start">
