--- a/myoungjin/html/alarm_select.html
+++ b/myoungjin/html/alarm_select.html
@@ -82,7 +82,7 @@
                 <div class="mx-auto">
                     <nav>
                         <div class="ml-3 flex-col justify-start">
-                            <div><a href="#" class="flex items-center mt-4">
+                            <div><a href="#" class="flex items-center">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                         fill="none">
                                         <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2"
