--- a/yunjin/ham.html
+++ b/yunjin/ham.html
@@ -74,7 +74,7 @@
         <div class="flex items-center justify-start">
         <div class="font-medium text-xs mt-1 mr-12">2023-07-23 오전 02:16</div>
         <!--도움돼요, 싫어요 버튼-->
-        <div class="font-light text-xs mt-1 mr-2" id="helpfulCount1">도움돼요 3 </div>
+        <div class="font-light text-xs mt-1 mr-2"  id="helpfulCount1">도움돼요 3 </div>
         <div class="font-light text-xs mt-1" id="dislikeCount1">싫어요 0</div>
         
         </div> 
@@ -96,7 +96,7 @@
         </div> 
         <div class="flex items-center justify-start">
         <div class="font-medium text-xs mt-1 mr-12">2023-07-23 오전 02:16</div>
-        <div class="font-light text-xs mt-1 mr-2" id="helpfulCount1">도움돼요 3</div>
+        <div class="font-light text-xs mt-1 mr-2" >도움돼요 </div>
         <div class="font-light text-xs mt-1" id="dislikeCount1">싫어요 0</div>
         
         </div> 
