--- a/yunjin/login.html
+++ b/yunjin/login.html
@@ -27,19 +27,19 @@
         <!--로그인 버튼-->
         <button type="submit" class="bg-yellow-300 text-black font-bold py-2 px-4 rounded-md mt-8 w-80 h-11">로그인</button>
         <!--로그인 유지체크박스 , 비밀번호 찾기 버튼-->
-        <div class="flex items-center mt-4 w-80 justify-between ">
-            <div>
-                <input type="checkbox" id="rememberId" class="h-4 w-4 rounded border-gray-400 accent-yellow-300">
-                <label for="rememberId" class="text-black font-medium text-sm">로그인 유지하기</label>
-            </div>
-            <button type="submit" class="text-black font-medium text-sm">비밀번호 찾기</button>
+        <div class="flex items-start w-80 justify-start">
+            
+                <input type="checkbox" id="rememberId" class="mt-4 h-4 w-4 rounded border-gray-400 accent-yellow-300 mr-2">
+                <label for="rememberId" class="mt-3.5 text-black font-medium text-sm mr-16">로그인 유지하기</label>
+     
+            <button type="submit" class="ml-10 text-black font-medium text-sm mt-3.5"><a href="findPassword.html">비밀번호 찾기</a></button>
         </div>
          <!-- 아직 삐용 회원이 아니신가요? -->
          <div class="text-black font-medium text-sm mt-20">
             아직 삐용 회원이 아니신가요?
         </div>
         <div class="text-black font-bold text-base mt-1 mb-1 border-b border-black" id="signup-link">
-            회원가입 하기
+            <a href="signup.html">회원가입 하기</a>
         </div> <!--밑줄 간격이 1px이 최저라.. 우선은 이렇게-->     
     </div> 
 </body>
