--- a/yunjin/main.html
+++ b/yunjin/main.html
@@ -37,6 +37,7 @@
       </nav>
 
       <nav class="bg-white border-gray-200 shadow-md">
+        
         <div
           class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
         >
@@ -56,7 +57,7 @@
       </nav>
       <!--메인 글씨-->
       <div class="flex items-center justify-center items-start mb-5">
-        <div class="flex flex-col justify-center items-start mt-2 mr-5">
+        <div class="flex flex-col justify-center items-start mt-2 mr-2 ml-2">
           <div
             class="flex items-center justify-center text-black font-extrabold text-3xl"
           >
@@ -73,27 +74,58 @@
       </div>
       <!--현재 날짜, 시각-->
       <div
-        id="currentDateTime"
-        class="text-black font-medium text-sm ml-4"
-      ></div>
+        class="text-black font-medium text-sm ml-6"
+      >2023/07/27 오전 1:59 기준</div>
 
       <!--뉴스상자-->
       <div class="flex items-center justify-center">
         <div
-          class="bg-white border-gray-200 shadow-md h-9 w-80 mt-5 p-2 text-sm text-center"
+          class="bg-white border-gray-200 shadow-md h-9 w-80 mt-5 p-2 text-sm text-center rounded-md"
         >
           [뉴스] 내일 전국 비... 새벽부터 호남 시간당 ...
         </div>
       </div>
       <div class="flex items-center justify-center mt-3">
         <!--날씨 이미지-->
-        <img src="img/날씨.png" class="w-20 h-16" />
+        <div class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20 mr-1">
+          <div class="flex justify-center items-center">
+            <img
+              class="flex justify-center items-center w-10 h-11 mb-3"
+              src="./img/날씨.png"
+            />
+          </div>
+          <p class="text-sm text-center">날씨</p>
+        </div>
         <!-- 지진 이미지 -->
-        <img src="img/지진.png" class="w-20 h-16 mt-1 ml-1" />
+        <div class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20 mr-1">
+            <div class="flex justify-center items-center">
+              <img
+                class="flex justify-center items-center w-10 h-11 mb-3"
+                src="../img/earthquake_icon.png"
+              />
+            </div>
+            <p class="text-sm text-center">지진/해일</p>
+          </div>
         <!--민방위 이미지-->
-        <img src="img/민방위.png" class="w-20 h-16" />
+        <div class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20 mr-1">
+          <div class="flex justify-center items-center">
+            <img
+              class="flex justify-center items-center w-10 h-11 mb-3"
+              src="./img/민방위.png"
+            />
+          </div>
+          <p class="text-sm text-center">민방위</p>
+        </div>
         <!-- 실종자 이미지 -->
-        <img src="img/실종자.png" class="w-20 h-16 mt-1 ml-1" />
+        <div class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20">
+          <div class="flex justify-center items-center">
+            <img
+              class="flex justify-center items-center w-10 h-11 mb-3"
+              src="./img/실종자.png"
+            />
+          </div>
+          <p class="text-sm text-center">실종자</p>
+        </div>
       </div>
       <!--메인 박스-->
       <div class="flex items-center justify-center text-start">
@@ -124,13 +156,13 @@
             출입을 금지합니다.
           </div>
           <div class="flex items-center justify-end text-end">
-            <img src="img/댓글.png" class="w-4 h-3.5 mt-2 mr-3" />
-            <div class="font-medium text-sm mt-2 mr-1">댓글</div>
-            <div class="font-medium text-bold mt-2 mr-5">5</div>
+            <img src="img/댓글.png" class="w-4 h-3.5 mt-1 mr-4" />
+            <div class="font-medium text-sm mt-1 mr-1">댓글</div>
+            <div class="font-medium text-bold mt-1 mr-5">5</div>
             <button
               id="authButton"
               type="button"
-              class="mt-3 w-14 h-7 bg-gray-600 rounded-md text-white font-medium text-sm"
+              class="w-14 h-7 bg-gray-600 rounded-md text-white font-medium text-sm"
             >
               더보기
             </button>
@@ -140,17 +172,17 @@
       <!--메인 박스-->
       <div class="flex items-center justify-center text-start">
         <div
-          class="bg-white border-gray-200 shadow-md h-48 w-80 mt-5 p-2 text-lg font-bold text-start"
+          class="bg-white rounded-md shadow-md h-48 w-80 mt-5 p-4 text-lg font-bold text-start"
         >
           <div class="flex items-center justify-between">
-            <div>행정안전부 알림</div>
+            <div>경기도청 알림</div>
             <div class="text-grey-600 font-medium text-sm ml-4">
               2023-07-23 오전 02:16
             </div>
           </div>
           <!--파란, 회색 버튼-->
           <button
-            class="w-14 h-7 bg-blue-300 rounded-full mr-3 text-sm font-medium text-white mb-1"
+            class="w-14 h-7 bg-blue-300 rounded-full mr-1 text-sm font-medium text-white mb-1"
           >
             호우
           </button>
@@ -162,48 +194,27 @@
           <div
             class="flex items-start justify-center text-black font-medium text-base"
           >
-            비가 예보되어 있습니다. 가급적 외출을 자제하시고, 지하차도 입구 등
-            도로면에 물이 흐르는 경우 주의하시길 바랍니다.
+            오늘 10시경 집중호우로 역곡천 산책로 침수발생. 하천변, 산책로 등은
+            출입을 금지합니다.
           </div>
           <div class="flex items-center justify-end text-end">
-            <img src="img/댓글.png" class="w-4 h-3.5 mt-4 mr-3" />
-            <div class="font-medium text-sm mt-3 mr-1">댓글</div>
-            <div class="font-medium text-bold mt-3 mr-5">5</div>
+            <img src="img/댓글.png" class="w-4 h-3.5 mt-1 mr-4" />
+            <div class="font-medium text-sm mt-1 mr-1">댓글</div>
+            <div class="font-medium text-bold mt-1 mr-5">5</div>
             <button
               id="authButton"
               type="button"
-              class="mt-3 w-14 h-7 bg-gray-600 rounded-md text-white font-medium text-sm"
+              class=" w-14 h-7 bg-gray-600 rounded-md text-white font-medium text-sm"
             >
               더보기
             </button>
           </div>
         </div>
       </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <script>
-      // 시간 구하는 함수
-      function updateDateTime() {
-        const currentDate = new Date();
-
-        const year = currentDate.getFullYear();
-        const month = currentDate.getMonth() + 1;
-        const date = currentDate.getDate();
-        const hours = currentDate.getHours();
-        const minutes = currentDate.getMinutes();
-        const seconds = currentDate.getSeconds();
-
-        const period = hours >= 12 ? "오후" : "오전";
-
-        const formattedHours = hours % 12 || 12;
-        const formattedMinutes = minutes < 10 ? "0" + minutes : minutes;
-        const formattedSeconds = seconds < 10 ? "0" + seconds : seconds;
-
-        const dateTimeElement = document.getElementById("currentDateTime");
-        dateTimeElement.textContent = `${year}-${month}-${date} ${period} ${formattedHours}:${formattedMinutes}:${formattedSeconds}`;
-
-        setTimeout(updateDateTime, 1000);
-      }
-      updateDateTime();
-    </script>
+    
   </body>
 </html>
