Fix: 햄버거바 수정, Design: 메인, 메인 세부 페이지 디자인 수정 (강윤진)

--- a/yunjin/main.html
+++ b/yunjin/main.html
@@ -87,7 +87,7 @@
       </div>
       <div class="flex items-center justify-center mt-3">
         <!--날씨 이미지-->
-        <div class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20 mr-1">
+        <div id="button" class ="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center mr-1">
           <div class="flex justify-center items-center">
             <img
               class="flex justify-center items-center w-10 h-11 mb-3"
@@ -97,7 +97,7 @@
           <p class="text-sm text-center">날씨</p>
         </div>
         <!-- 지진 이미지 -->
-        <div class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20 mr-1">
+        <div id="button" class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20 mr-1">
             <div class="flex justify-center items-center">
               <img
                 class="flex justify-center items-center w-10 h-11 mb-3"
@@ -107,7 +107,7 @@
             <p class="text-sm text-center">지진/해일</p>
           </div>
         <!--민방위 이미지-->
-        <div class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20 mr-1">
+        <div id="button" class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20 mr-1">
           <div class="flex justify-center items-center">
             <img
               class="flex justify-center items-center w-10 h-11 mb-3"
@@ -117,7 +117,7 @@
           <p class="text-sm text-center">민방위</p>
         </div>
         <!-- 실종자 이미지 -->
-        <div class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20">
+        <div id="button" class="bg-white border-gray-200 shadow-md rounded-md block justify-center items-center w-20 h-20">
           <div class="flex justify-center items-center">
             <img
               class="flex justify-center items-center w-10 h-11 mb-3"
