design: 디자인 변경

--- a/myoungjin/html/alarm.html
+++ b/myoungjin/html/alarm.html
@@ -32,8 +32,6 @@
                     </div>
                 </div>
             </nav>
-
-            <nav>
                 <div class="border-b-2 h-32">
                     <div class="ml-3 flex-col justify-start h-12">
                         <div><a href="#" class="flex items-center mt-4">
@@ -45,25 +43,25 @@
                         </div>
                         <div class="font-bold text-3xl">알림</div>
                     </div>
-                    <div class="text-sm ml-3 flex justify-start mt-5 h-5">
+                    <div class="text-sm ml-3 flex justify-start mt-5 h-5 space-x-8">
                         <div class="pt-1">
                             <span>아직 확인하지 않은</span>
                             <span class="alarm-num">2</span>
                             <span>개의 알림이 있어요</span>
                         </div>
-                        <div class="bg-gray-600 w-11 h-7 rounded text-center text-white ml-5 mb-2 pt-1">
+                        <div class="bg-gray-600 w-11 h-7 rounded text-center text-white ml-5 pt-1">
                             <button>설정</button>
                             <!-- <button onclick="location.href='alarm_select.html'">설정</button> -->
                             <!-- 이거 쓰면 다음 페이지 넘어갔다가 다시 알림페이지로 돌아옴. 왜 ?? -->
                         </div>
                     </div>
                 </div>
-            </nav>
+        
             <!--main-->
-            <div id="alarm message" class="h-20 max-w-screen-xl flex flex-wrap mb-5 ">
-                <div class="flex space-x-40 ml-3">
-                    <div class="font-bold text-xl">경기도청 알림</div>
-                    <div class="text-xs  ">4분전</div>
+            <div id="alarm message" class="max-w-screen-xl flex flex-wrap mb-4">
+                <div class="flex space-x-40 ml-3 space-x-16">
+                    <div class="font-bold text-xl mb-4 mr-4">경기도청 알림</div>
+                    <div class="text-xs">4분전</div>
                 </div>
                 <div class="ml-3">집중호우 관련 예보가 도착했습니다.</div>
             </div>
