--- a/yunjin/login.html
+++ b/yunjin/login.html
@@ -42,5 +42,6 @@
             <a href="signup.html">회원가입 하기</a>
         </div> <!--밑줄 간격이 1px이 최저라.. 우선은 이렇게-->     
     </div> 
+    <script src="javascript/login.js"></script>
 </body>
 </html>
