--- a/jiyoung/myChecklist.html
+++ b/jiyoung/myChecklist.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
-    <script src="./assets/config.js"></script>
+    <script src="./js/myChecklist.js"></script>
 
     <title>main</title>
     <link rel="stylesheet" href="../css/config.css" />
@@ -101,7 +102,13 @@
           <div class="warp">
             <div class="checklist-title">
               <div class="flex justify-between">
-                <p class="font-bold px-4 py-2 text-lg">체크리스트 A</p>
+                <p
+                  contenteditable="false"
+                  id="checklist-title-text"
+                  class="font-bold px-4 py-2 text-lg"
+                >
+                  체크리스트 A
+                </p>
                 <button
                   type="button"
                   class="m-1.5 px-2.5 py-1 text-white bg-gray-600 hover:bg-gray-100 rounded-lg border border-gray-200 text-sm font-medium hover:text-gray-900"
@@ -112,67 +119,44 @@
               <div class="bg-gray-100 h-0.5"></div>
             </div>
 
-            <div class="checklist-content overflow-auto">
-              <div class="chechlist-task px-4 py-2 flex items-center">
-                <div class="flex h-6 items-center">
-                  <button
-                    class="w-5 h-5 rounded-full border border-gray-600"
-                  ></button>
-                </div>
-                <p class="px-4 text-sm">가족끼리 모일 장소 정하기</p>
-                <button class="delete-btn ml-auto">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="18"
-                    height="18"
-                    viewBox="0 0 18 18"
-                    fill="none"
-                  >
-                    <path
-                      d="M4.5 4.5L13.5 13.5M4.5 13.5L13.5 4.5L4.5 13.5Z"
-                      stroke="#3F3F46"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </button>
-              </div>
-
-              <div class="chechlist-task px-4 py-2 flex items-center">
-                <div class="flex h-6 items-center">
-                  <button
-                    class="w-5 h-5 rounded-full border border-gray-600"
-                  ></button>
-                </div>
-                <p class="px-4 text-sm">꼬미 간식 챙기기</p>
-              </div>
-            </div>
+            <div class="checklist-content overflow-auto"></div>
           </div>
 
           <div class="checklist-footer">
-            <div class="checklist-input flex justify-center">
+            <div class="hidden checklist-input mt-2 mb-2 relative">
               <input
+                id="checklist-input"
                 placeholder="체크리스트를 추가해보세요."
-                type="text"
-                id="small-input"
-                class="relative w-72 p-2 m-2 text-gray-900 border border-gray-300 rounded-lg bg-white sm:text-xs focus:ring-blue-500 focus:border-blue-500"
+                class="text-gray-900 border border-gray-300 form-input w-80 h-11 px-3 py-2 rounded-md border focus:outline-none focus:ring focus:border-blue-600"
+                required
               />
               <button
+                id="add-btn"
                 type="button"
-                class="absolute right-10 placeholder:text-xs translate-y-2.5 px-2.5 py-1 text-white bg-gray-600 hover:bg-black rounded-lg border border-gray-200 text-sm font-medium hover:text-white"
+                class="absolute right-2 translate-y-1/4 w-11 h-7 bg-gray-600 rounded-md text-white font-bold text-sm"
               >
-                <p class="text-center">입력</p>
+                추가
               </button>
             </div>
+
             <div class="bg-gray-100 h-0.5"></div>
 
             <div class="flex justify-center items-center">
               <button
+                onclick="getEditMode()"
+                id="edit-btn"
                 type="button"
                 class="m-1.5 px-2.5 py-1 text-white bg-green-600 hover:bg-green-700 rounded-lg border border-gray-200 text-sm font-medium hover:text-white"
               >
                 <p class="text-center">수정하기</p>
+              </button>
+              <button
+                onclick="getNormalMode()"
+                id="edit-done-btn"
+                type="button"
+                class="hidden m-1.5 px-2.5 py-1 text-white bg-green-600 hover:bg-green-700 rounded-lg border border-gray-200 text-sm font-medium hover:text-white"
+              >
+                <p class="text-center">수정완료</p>
               </button>
             </div>
           </div>
