--- a/myoungjin/html/alarm.html
+++ b/myoungjin/html/alarm.html
@@ -8,17 +8,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 
-    <script src="./assets/config.js"></script>
 
     <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
 </head>
 
 <body>
-    <div class="relative content bg-gray-50 border-white">
-        <div class="bg-white border-gray-200 shadow">
+    <div class="relative content bg-white border-white">
+        <div class="bg-white border-gray-200">
             <nav>
-                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 border-b-2">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15 shadow">
                     <a href="#" class="flex items-center">
                         <img src="../img/logo.png" class="w-24 h-9 mr-3" />
                     </a>
@@ -32,43 +31,44 @@
                     </div>
                 </div>
             </nav>
-                <div class="border-b-2 h-32">
-                    <div class="ml-3 flex-col justify-start h-12">
-                        <div><a href="#" class="flex items-center mt-4">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none">
-                                    <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                </svg>
-                        </div>
-                        <div class="font-bold text-3xl">알림</div>
+            <!--알림-->
+            <div class="border-b-2 h-28">
+                <div class="ml-3 flex-col justify-start h-12">
+                    <div class="flex items-center mt-4 mb-2"><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none">
+                                <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
                     </div>
-                    <div class="text-sm ml-3 flex justify-start mt-5 h-5 space-x-8">
-                        <div class="pt-1">
-                            <span>아직 확인하지 않은</span>
-                            <span class="alarm-num">2</span>
-                            <span>개의 알림이 있어요</span>
-                        </div>
-                        <div class="bg-gray-600 w-11 h-7 rounded text-center text-white ml-5 pt-1">
-                            <button>설정</button>
-                            <!-- <button onclick="location.href='alarm_select.html'">설정</button> -->
-                            <!-- 이거 쓰면 다음 페이지 넘어갔다가 다시 알림페이지로 돌아옴. 왜 ?? -->
-                        </div>
+                    <div class="font-bold text-3xl">알림</div>
+                </div>
+                <div class="text-sm ml-3 flex justify-start mt-7 space-x-8">
+                    <div class="ml-1 pt-1" id="alarm_num">
+                    </div>
+                    <div class="bg-gray-600 w-11 h-7 rounded text-center text-white ml-5 pt-1">
+                        <a href="../html/alarm_select.html">설정</a>
                     </div>
                 </div>
-        
-            <!--main-->
-            <div id="alarm message" class="max-w-screen-xl flex flex-wrap mb-4">
-                <div class="flex space-x-40 ml-3 space-x-16">
-                    <div class="font-bold text-xl mb-4 mr-4">경기도청 알림</div>
-                    <div class="text-xs">4분전</div>
-                </div>
-                <div class="ml-3">집중호우 관련 예보가 도착했습니다.</div>
             </div>
-            
+
+            <!--main-->
+            <div id="alarm_message" class="flex flex-wrap mb-4">
+                <!-- <div class="pb-2 border-b-2 mt-4"> 
+                    <div class="flex space-x-40 ml-3 space-x-16">
+                        <div class="font-bold text-xl mb-1 mr-4">경기도청 알림</div>
+                        <div class="text-xs">4분전</div>
+                    </div>
+                    <div class="ml-3 mb-2">집중호우 관련 예보가 도착했습니다.</div>
+                </div> -->
+            </div>
+
+
         </div>
 
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../js/alarm.js"></script>
 </body>
 
 </html>
