회원정보 mock데이터 수정(강윤진)

--- a/yunjin/editMember.html
+++ b/yunjin/editMember.html
@@ -25,8 +25,14 @@
         <div class="w-80 h-px bg-gray-300 my-2"></div>
          <!--id input-box -->
          <div class="input-box mt-0">
-            <label for="id" class="block text-black-700 font-bold mb-2">아이디</label>
-            <input type="id" id="id" name="id" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
+          <label for="id" class="block text-black-700 font-bold mb-2">아이디</label>
+          <input
+            type="id"
+            id="id"
+            name="id"
+            class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600"
+            required
+          />
         </div>
         <!--비밀번호 input-box-->
         <div class="input-box mt-1 relative">
