--- a/myoungjin/html/alarm_select.html
+++ b/myoungjin/html/alarm_select.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
 
 
     <title>삐용</title>
-    <link rel="stylesheet" href="../css/alarm_select.css" />
+    <link rel="stylesheet" href="../css/select.css" />
 </head>
 
 <body>
@@ -44,16 +44,16 @@
                                     </svg>
                             </div>
                             <div>
-                                <div class="font-bold text-3xl">알림 설정</div>
-                                <div class="font-bold text-lg ml-1 mt-5">지역 선택</div>
+                                <div class="font-bold text-3xl mt-2">알림 설정</div>
+                                <div class="font-bold text-lg ml-1 mt-3">지역 선택</div>
                                 <div class="text-sm ml-1 mt-1">웹 푸시 알림을 받고 싶은 지역을 선택해 주세요.</div>
                             </div>
                         </div>
                     </div>
                 </nav>
                 <div>
-                    <div id="countryBox">
-                        <div><button type="button">서울특별시</button></div>
+                    <div id="countryBox" class="text-base font-normal">
+                        <!-- <div><button type="button" id="SEOUL">서울특별시</button></div>
                         <div><button type="button">부산광역시</button></div>
                         <div><button type="button">대구광역시</button></div>
                         <div><button type="button">인천광역시</button></div>
@@ -69,7 +69,7 @@
                         <div><button type="button">전라남도</button></div>
                         <div><button type="button">경상북도</button></div>
                         <div><button type="button">경상남도</button></div>
-                        <div><button type="button">제주특별자치도</button></div>
+                        <div><button type="button">제주특별자치도</button></div> -->
                     </div>
                     <div class="mx-auto">
                         <button type="button" onclick="next()"
@@ -92,16 +92,16 @@
                                 </div>
 
                                 <div>
-                                    <div class="font-bold text-3xl">알림 설정</div>
-                                    <div class="font-bold text-lg ml-1 mt-5">재난 카테고리 선택</div>
-                                    <div class="text-sm ml-1 mt-1">웹 푸시 알림을 받고 싶은 지역을 선택해 주세요.</div>
+                                    <div class="font-bold text-3xl mt-2">알림 설정</div>
+                                    <div class="font-bold text-lg ml-1 mt-3">재난 카테고리 선택</div>
+                                    <div class="text-sm ml-1 mt-1 mb-2">웹 푸시 알림을 받고 싶은 지역을 선택해 주세요.</div>
                                 </div>
                             </div>
                         </div>
                     </nav>
 
                     <div>
-                        <div id="categoryBox">
+                        <div id="categoryBox" class="text-base font-normal">
                             <div><button type="button">날씨</button></div>
                             <div><button type="button">지진/해일</button></div>
                             <div class="pt-1"><button type="button">민방위</button></div>
@@ -119,7 +119,10 @@
         </div>
 
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/alarm_select.js"></script>
+    <script src="../js/countryBox.js"></script>
+    
 </body>
 
 </html>
