--- a/myoungjin/html/select_other.html
+++ b/myoungjin/html/select_other.html
@@ -10,7 +10,7 @@
 
 
     <title>삐용</title>
-    <link rel="stylesheet" href="../css/alarm_select.css" />
+    <link rel="stylesheet" href="../css/select.css" />
 </head>
 
 
@@ -60,7 +60,7 @@
                 </nav>
                 <div>
                     <div id="countryBox">
-                        <div><button type="button">서울특별시</button></div>
+                        <!-- <div><button type="button">서울특별시</button></div>
                         <div><button type="button">부산광역시</button></div>
                         <div><button type="button">대구광역시</button></div>
                         <div><button type="button">인천광역시</button></div>
@@ -76,7 +76,7 @@
                         <div><button type="button">전라남도</button></div>
                         <div><button type="button">경상북도</button></div>
                         <div><button type="button">경상남도</button></div>
-                        <div><button type="button">제주특별자치도</button></div>
+                        <div><button type="button">제주특별자치도</button></div> -->
                     </div>
 
                 </div>
@@ -88,7 +88,8 @@
 
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../js/countryBox.js"></script>
 </body>
 
 </html>
