회원가입 ajax- 임시 (강윤진)

--- a/yunjin/signup.html
+++ b/yunjin/signup.html
@@ -251,6 +251,8 @@
         nextButton.textContent = "회원가입 완료";
       });
     </script>
+     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+     <script src="js/signup.js"></script>
   </body>
 </html>
 
