--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-	<title>테스트</title>
+	<title>Test</title>
 </head>
   <body>
   	<h1>안녕하세용 테슷트입니다</h1>
