Fix : 인코딩 이슈 ^^;;

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<title>Test</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PPIYONG</title>
 </head>
-  <body>
-  	<h1>안녕하세용 테슷트입니다</h1>
-  </body>
+<body>
+    <h1>안녕하세용 이거슨 테스트입니다</h1>
+</body>
 </html>
