feat: 비밀번호 찾기 -ajax(강윤진)

--- a/yunjin/findPassword.html
+++ b/yunjin/findPassword.html
@@ -35,4 +35,7 @@
             전송하기
         </button>
     </div>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/findPassword.js"></script>
+    </body>
 </html>
