feat: 비밀번호 변경-ajax (강윤진)

--- a/yunjin/changePassword.html
+++ b/yunjin/changePassword.html
@@ -27,8 +27,8 @@
 
        <!--새 비밀번호 재입력 input-box -->
          <div class="input-box mt-4">
-            <label for="password" class="block text-black-700 font-bold mb-2">새 비밀번호 재입력</label>
-            <input type="password" id="password" name="password" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
+            <label for="passwordConfirmation" class="block text-black-700 font-bold mb-2">새 비밀번호 재입력</label>
+            <input type="password" id="passwordConfirmation" name="passwordConfirmation" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
         </div>
 
        <!-- 비밀번호 변경하기 버튼 -->
@@ -36,4 +36,7 @@
         비밀번호 변경하기
     </button>
     </div>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/changePassword.js"></script>
+    </body>
 </html>
