feat:알림, 알림설정 최종

--- a/myoungjin/html/alarm.html
+++ b/myoungjin/html/alarm.html
@@ -47,7 +47,7 @@
                     <div class="ml-1 pt-1" id="alarm_num">
                     </div>
                     <div class="bg-gray-600 w-11 h-7 rounded text-center text-white ml-5 pt-1">
-                        <a href="../html/alarm_select.html">설정</a>
+                        <a href="../html/select_region.html">설정</a>
                     </div>
                 </div>
             </div>
