--- a/myoungjin/html/select_other.html
+++ b/myoungjin/html/select_other.html
@@ -47,7 +47,7 @@
                                         <path d="M10 19L3 12M3 12L10 5M3 12H21" stroke="#3F3F46" stroke-width="2"
                                             stroke-linecap="round" stroke-linejoin="round" />
                                     </svg>
-                                    <div class="w-56 h-8 bg-yellow-100 rounded-full text-xs ml-10 px-4 p-2" style="display:none">지역이 성공적으로
+                                    <div class="w-56 h-8 bg-yellow-100 rounded-full text-xs ml-10 px-4 p-2" id="toastMsg" style="display:none">지역이 성공적으로
                                         변경되었습니다.</div>
                             </div>
 
@@ -89,7 +89,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../js/countryBox.js"></script>
+    <script src="../js/select_other.js"></script>
 </body>
 
 </html>
