--- a/myoungjin/html/map.html
+++ b/myoungjin/html/map.html
@@ -10,7 +10,7 @@
 
 
     <title>삐용</title>
-    <link rel="stylesheet" href="../css/config.css" />
+    <link rel="stylesheet" href="../css/map.css" />
 </head>
 
 <body>
@@ -53,42 +53,46 @@
             </nav>
             <!--main-->
             <div class="bg-gray-50">
-            <div class="ml-5 mr-5 mb-5 mt-2">
-                <div class="font-bold text-2xl">인천광역시 부평구 삼산2동</div>
-                <div class="text-lg mt-1">주변 대피소를 확인해보세요.</div>
-                <div class="flex mb-2 mt-2 mb-1">
-
-                    <button
-                        class="h-8 bg-gray-600 item-center rounded-full text-xs px-4 p-2 text-white font-bold">전체</button>
-                    <button
-                        class="h-8 bg-yellow-600 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">지진/해일</button>
-                    <button
-                        class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">민방위</button>
-                </div>
-
-                <div id="map" style="width: 100%; height: 60vh;"></div>
-            </div>
-            <div id="modal" class="bg-white">
-                <div class="modal-window">
-                    <div class="close-area">
-                        <button>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14"
-                                fill="none">
-                                <path d="M1 1L13 13M1 13L13 1L1 13Z" stroke="#3F3F46" stroke-width="2"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-                        </button>
+                <div class="ml-5 mr-5 mb-5 mt-2">
+                    <div class="address">
+                    <div class="font-bold text-2xl">인천광역시 부평구 삼산2동</div>
+                    <div class="text-lg mt-1">주변 대피소를 확인해보세요.</div>
                     </div>
-                    <div>보람아파트 지하주차장 대피소</div>
-                    <div><button
-                            class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">민방위
-                            대피시설</button></div>
-                    <div>
-                        <div><span>인천광역시 부평구 굴포로 158</span><button class="ml-2">복사</button></div>
+                    <div class="flex mb-2 mt-2 mb-1">
+
+                        <button
+                            class="h-8 bg-gray-600 item-center rounded-full text-xs px-4 p-2 text-white font-bold">전체</button>
+                        <button
+                            class="h-8 bg-yellow-600 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">지진/해일</button>
+                        <button
+                            class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">민방위</button>
                     </div>
+
+                    <div id="map" style="width: 100%; height: 60vh;"></div>
+                </div>
+                <div id="modal" class="bg-white" style="display:none;">
+                    <!-- <div class="modal-window"> -->
+                        <div class="close-area">
+                            <button>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14"
+                                    fill="none">
+                                    <path d="M1 1L13 13M1 13L13 1L1 13Z" stroke="#3F3F46" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="content">
+                            <!-- <div>보람아파트 지하주차장 대피소</div>
+                            <div><button
+                                    class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold">민방위
+                                    대피시설</button></div>
+                            <div>
+                                <div><span>인천광역시 부평구 굴포로 158</span><button class="ml-2">복사</button></div>
+                            </div> -->
+                        </div>
+                    <!-- </div> -->
                 </div>
             </div>
-        </div>
         </div>
 
 
