--- a/myChecklist.html
+++ b/myChecklist.html
@@ -63,7 +63,7 @@
               재난대비 체크리스트
             </p>
           </div>
-          <div><img src="../img/pencil_icon.png"</div>
+          <div><img src="../img/icon/pencil_icon.png"</div>
         </div>
       </div>
 
