--- a/myChecklist.html
+++ b/myChecklist.html
@@ -8,9 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
-    <script src="./js/refactoring.js"></script>
+    <script src="./js/myChecklist.js"></script>
 
-    <title>main</title>
+    <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
   </head>
 
