Design :파일 정리(강윤진)

--- a/account/changePassword.html
+++ b/account/changePassword.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="config.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+    <link rel="stylesheet" href="../css/config.css" />
     <title>삐용</title>
 </head>
 <body class="flex flex-col items-center mt-8">
     <!-- 로고 이미지 삽입 -->
     <div class="flex items-center justify-center mb-10">
-        <img src="img/logo.png" alt="logo" class="w-8 h-8" />
+        <a href="#" class="flex items-center">
+            <img src="../img/logo.png" class="w-24 h-9 mr-3" />
+          </a>
         <!-- 삐용 이미지 -->
-        <img src="img/삐용.png" alt="삐용" class="w-16 h-9 mt-1 ml-1" />
+       
     </div>
     <div class="flex flex-col items-start">
         <!--비밀번호 변경하기 -->
@@ -20,15 +23,15 @@
             비밀번호 변경하기
         </div>
          <!--새 비밀번호 input-box -->
-         <div class="input-box mt-4">
+         <div id = password class="input-box mt-4">
             <label for="password" class="block text-black-700 font-bold mb-2">새 비밀번호</label>
             <input type="password" id="password" name="password" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
         </div>
 
        <!--새 비밀번호 재입력 input-box -->
-         <div class="input-box mt-4">
+         <div id = passwordConfirmation class="input-box mt-4">
             <label for="passwordConfirmation" class="block text-black-700 font-bold mb-2">새 비밀번호 재입력</label>
-            <input type="password" id="passwordConfirmation" name="passwordConfirmation" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
+            <input type="passwordConfirmation" id="passwordConfirmation" name="passwordConfirmation" class="form-input w-80 h-11 px-3 py-2 rounded-md border border-gray-400 focus:outline-none focus:ring focus:border-blue-600" required />
         </div>
 
        <!-- 비밀번호 변경하기 버튼 -->
@@ -37,6 +40,6 @@
     </button>
     </div>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="js/changePassword.js"></script>
+    <script src="../js/changePassword.js"></script>
     </body>
 </html>
