--- a/account/editMember.html
+++ b/account/editMember.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="config.css">
+    <link rel="stylesheet" href="../css/config.css" />
     <title>삐용</title>
 </head>
 <body class="flex flex-col items-center mt-8">
     <!-- 로고 이미지 삽입 -->
-    <div class="flex items-center justify-center mb-10">
-        <img src="img/logo.png" alt="logo" class="w-8 h-8" />
-        <!-- 삐용 이미지 -->
-        <img src="img/삐용.png" alt="삐용" class="w-16 h-9 mt-1 ml-1" />
+      <div class="flex items-center justify-center mb-10">
+        <a href="#" class="flex items-center">
+            <img src="../img/logo.png" class="w-24 h-9 mr-3" />
+          </a>
     </div>
     <div class="flex flex-col items-start">
         <!-- 회원정보 수정하기 -->
@@ -107,6 +107,6 @@
 </div>
          </div>
          <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-         <script src="js/editMember.js"></script>
+         <script src="../js/editMember.js"></script>
    </body> 
 </html>
