--- a/account/login.html
+++ b/account/login.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="config.css">
+    <link rel="stylesheet" href="../css/config.css" />
     <title>삐용</title>
 </head>
 <body class="flex justify-center items-center mt-8">
     <div class="flex flex-col items-center">
         <!-- 로고 이미지 삽입 -->
         <div class="flex items-center">
-            <img src="img/logo.png" alt="logo" class="w-8 h-8">
-            <!-- 삐용 이미지 -->
-            <img src="img/삐용.png" alt="삐용" class="w-16 h-9 mt-1 ml-1">
+            <a href="#" class="flex items-center">
+                <img src="../img/logo.png" class="w-24 h-9 mr-3" />
+              </a>
         </div>
         <!--이메일, 비밀번호 inputbox-->
         <div class="input-box mt-20">
@@ -43,6 +43,6 @@
         </div> <!--밑줄 간격이 1px이 최저라.. 우선은 이렇게-->     
     </div> 
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="js/login.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
