--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
-    <link rel="stylesheet" href="config.css" />
+    
     <script src="./assets/config.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
@@ -28,9 +28,9 @@
         >
           <!-- 로고 이미지 삽입 -->
           <div class="flex items-center justify-center">
-            <img src="img/logo.png" alt="logo" class="w-8 h-8" />
-            <!-- 삐용 이미지 -->
-            <img src="img/삐용.png" alt="삐용" class="w-16 h-9 mt-1 ml-1" />
+            <a href="#" class="flex items-center">
+              <img src="../img/logo.png" class="w-24 h-9 mr-3" />
+            </a>
             <div class="flex justify-end items-center">
               <div class="w-20 h-8 text-center p-1 ml-14">
                 <button>로그인</button>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <!--확성기 이미지 -->
-        <img src="img/확성기.png" alt="삐용" class="w-16 h-14 mt-5" />
+        <img src="../img/icon/확성기.png" alt="삐용" class="w-16 h-14 mt-5" />
       </div>
       <!--현재 날짜, 시각-->
       <div
@@ -101,7 +101,7 @@
           <div class="flex justify-center items-center">
             <img
               class="flex justify-center items-center w-10 h-11 mb-3"
-              src="./img/날씨.png"
+              src="../img/icon/날씨.png"
             />
           </div>
           <p class="text-sm text-center">날씨</p>
@@ -112,7 +112,7 @@
   <div class="flex justify-center items-center">
     <img
       class="flex justify-center items-center w-10 h-11 mb-3"
-      src="../img/earthquake_icon.png"
+      src="../img/icon/earthquake_icon.png"
     />
   </div>
   <p class="text-sm text-center">지진/해일</p>
@@ -122,7 +122,7 @@
           <div class="flex justify-center items-center">
             <img
               class="flex justify-center items-center w-10 h-11 mb-3"
-              src="./img/민방위.png"
+              src="../img/icon/민방위.png"
             />
           </div>
           <p class="text-sm text-center">민방위</p>
@@ -132,7 +132,7 @@
           <div class="flex justify-center items-center">
             <img
               class="flex justify-center items-center w-10 h-11 mb-3"
-              src="./img/실종자.png"
+              src="../img/icon/실종자.png"
             />
           </div>
           <p class="text-sm text-center">실종자</p>
@@ -168,7 +168,7 @@
             출입을 금지합니다.
           </div>
           <div class="flex items-center justify-end text-end">
-            <img src="img/댓글.png" class="w-4 h-3.5 mt-1 mr-4" />
+            <img src="../img/icon/댓글.png" class="w-4 h-3.5 mt-1 mr-4" />
             <div class="font-medium text-sm mt-1 mr-1">댓글</div>
             <div class="font-medium text-bold mt-1 mr-5">5</div>
             <button
@@ -187,6 +187,6 @@
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-      <script src="js/main.js"></script>
+      <script src="../js/main.js"></script>
   </body>
 </html>
