--- a/mainDetail.html
+++ b/mainDetail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
-    <link rel="stylesheet" href="config.css">
+   
     <script src="./assets/config.js"></script>
     <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
@@ -17,13 +17,13 @@
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 h-15">
                 <!-- 로고 이미지 삽입 -->
                 <div class="flex items-center justify-center">
-                <img src="img/logo.png" alt="logo" class="w-8 h-8" />
-                <!-- 삐용 이미지 -->
-                <img src="img/삐용.png" alt="삐용" class="w-16 h-9 mt-1 ml-1 mr-12" />
+                  <a href="#" class="flex items-center">
+                    <img src="../img/logo.png" class="w-24 h-9 mr-10" />
+                  </a>
                 <div class="flex items-center justify-end text-end">
-                    <img src="img/알림.png"  class="w-6 h-6 mt-3 mr-3">
+                    <img src="../img/icon/알림.png"  class="w-6 h-6 mt-3 mr-3">
                 <div class="font-medium text-lg mt-1 mr-6">강윤진님</div>
-                <img src="img/햄버거바.png" alt="menu" class="w-6 h-5 mt-2">
+                <img src="../img/icon/햄버거바.png" alt="menu" class="w-6 h-5 mt-2">
                 </div>
                 </div>
             </div>
@@ -105,6 +105,6 @@
     <div class="flex items-center justify-center w-80 h-px bg-gray-400 my-2 mt-5" ></div>
  </div>
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="js/mainDetail.js"></script>
+<script src="../js/mainDetail.js"></script>
 </body>
 </html>
